<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.biophonie.viewmodels.BottomSheetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/design_default_color_background"
        app:behavior_hideable="true"
        app:behavior_skipCollapsed="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/ExampleProgressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="20dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BottomSheetTextView"
            android:id="@+id/location"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@={viewModel.geoPoint.name}"
            android:background="@drawable/border_bottom_top"
            app:layout_constraintEnd_toStartOf="@id/coordinates"
            app:layout_constraintHorizontal_weight="6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BottomSheetTextView"
            android:id="@+id/coordinates"
            android:text="@={viewModel.geoPoint.coordinates}"
            android:gravity="center"
            android:background="@drawable/border_bottom_top"
            app:layout_constraintEnd_toEndOf="@+id/close"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toEndOf="@id/location"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/close"
            android:padding="4dp"
            android:layout_width="@dimen/pinnable"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:src="@drawable/ic_marker"
            android:background="@drawable/border_bottom_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/coordinates"
            app:layout_constraintBottom_toBottomOf="@id/coordinates"
            app:layout_constraintTop_toTopOf="parent" />

        <fr.haran.soundwave.ui.PlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/wave_form"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/pin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location"
            app:layout_constraintVertical_bias="0.0"
            app:mainColor="@android:color/black"
            app:secondaryColor="@android:color/darker_gray"
            app:title="Music Title" />

        <ImageView
            android:id="@+id/sound_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/france"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/pin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BottomSheetTextView"
                android:id="@+id/left"
                android:focusable="true"
                android:onClick="@{() -> viewModel.onLeftClick()}"
                android:background="@drawable/border_top"
                android:textColor="@color/colorPrimary"
                android:text="&lt;"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/date_picker"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BottomSheetTextView"
                android:id="@+id/date_picker"
                android:background="@drawable/border_top"
                android:text="@={viewModel.datePicker}"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintEnd_toStartOf="@id/right"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BottomSheetTextView"
                android:id="@+id/right"
                android:onClick="@{() -> viewModel.onRightClick()}"
                android:focusable="true"
                android:background="@drawable/border_top"
                android:textColor="@color/colorPrimary"
                android:text="&gt;"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/date_picker"
                app:layout_constraintEnd_toStartOf="@id/expand"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BottomSheetTextView"
                android:id="@+id/expand"
                android:background="@drawable/border_top_left"
                android:text="Voir la photo"
                app:layout_constraintHorizontal_weight="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/right" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>