...
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MapActivity"
        android:id="@+id/containerMap">

        <com.mapbox.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:mapbox_cameraTargetLat="46.298657"
...
            app:fabCustomSize="40dp"
            app:shapeAppearanceOverlay="@style/FabSquare"
            style="@style/ButtonStyle"
            android:contentDescription="@string/about" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/location_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_location_searching"
            android:layout_gravity="bottom|end"
            android:layout_marginVertical="50dp"
            android:layout_marginHorizontal="15dp"
...
